fix for png on ie6
git-svn-id: file:///raid/svn-personal/koakuma/trunk@24 219d0f9c-2d94-d447-890a-813e76b88fe9

--- a/Static/style.css
+++ b/Static/style.css
@@ -49,6 +49,11 @@ th {
 	height: 88px;
 }
 
+img {
+	border: none;
+	background-color: transparent;
+}
+
 #title {
 	padding: 5px;
 	background-color: #606080;
